--- a/text.tex
+++ b/text.tex
@@ -12,7 +12,7 @@
 \usepackage{xcolor}  % zapne možnost používání barev, mj. pro \definecolor
 \definecolor{mygreen}{RGB}{0,150,0} % nastavení barev odkazů 
 \usepackage{listings} % balíček pro formátování zdrojových kódů 
-\usepackage[author=,status=final]{fixme} % vkládání poznámek  
+\usepackage[author=,status=draft]{fixme} % vkládání poznámek  
 % dva módy (status): draft (poznámky se zobrazují v PDF) / final (poznámky se nezobrazují v PDF)
 \usepackage{multirow}
 
@@ -25,16 +25,16 @@
 \addbibresource{text.bib}
 \nocite{*}
 
-\titlecz{Návody k SolidWorks}
-\titleen{SolidWorks tutorials}
-\author{Petr Štourač}
-\school{Střední průmyslová škola a~Vyšší odborná škola Brno, Sokolská, příspěvková organizace}
-\mentor{Ing. Václav Zavadil}
-\mentorstatement{Ing. Václava Zavadila}
-\field{Strojírenská konstrukce}
+\titlecz{Využití videonávodů pro výuku konstrukce v SolidWorks} % Název práce
+\titleen{Videoguides usage in SolidWorks construction education} % Anglický název práce
+\author{Petr Štourač} % Jméno autora
+\institution{STŘEDNÍ PRŮMYSLOVÁ A VYŠŠÍ ODBORNÁ ŠKOLA BRNO, Sokolská} % Celý název instituce
+\institutiontype{příspěvková organizace} % Typ instituce
+\thesistype{Maturitní práce}  % Typ práce/dokumentu
+\mentor{Ing. Václav Zavadil} % Jméno vedoucího práce
+\mentorstatement{Ing. Václava Zavadila} % Jméno vedoucího práce ve čtvrtém pádě
+\field{Strojírenská konstrukce} % Okruh, nebo téma
 
-% Změňte, pokud se liší
-%\region{Jihomoravský}
 \placefooter{Brno 2021}
 
 %\usepackage{hyperref} % balíček pro hypertextové odkazy
@@ -42,13 +42,12 @@
 % \href{http://www.odkaz.cz}{Text který bude jako odkaz}
 % \hyperlink{label}{proklikávací_text} - odkaz na text 
 % \hypertarget{label}{cíl_odkazu} - cíl odkazu 
- 
 
 \begin{document}
 
 \maketitle
 
-\makecopyrightstatement{V~Brně}
+%\makecopyrightstatement{V~Brně}
 
 \makethanks{Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. Pellentesque arcu. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce aliquam vestibulum ipsum. Aenean placerat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Vivamus porttitor turpis ac leo. Nullam eget nisl. Maecenas libero. Nunc auctor. Nullam rhoncus aliquam metus. Integer pellentesque quam vel velit.}
 
@@ -64,7 +63,9 @@ Sem patří anotace v češtině.
 
 \section*{Annotation}
 Here goes english version of thesis annotation.
-%\fxnote[author=PŠ]{Přeložím během dnešního večera}
+\fxnote[author=PŠ]{Nějak takto vypadá poznámka vytvořená přes fxnote}
+
+\fxnote[author=PŠ]{\textcolor{mygreen}{A dokonce je lze obarvit!}}
 
 \subsection*{Keywords}
 Here goes 5 or more keywords
@@ -83,7 +84,7 @@ Here goes 5 or more keywords
 \input{CHAPTERS/UVOD.tex}
 
 % Uspory dosazene pouzitim protoplantu
-\input{CHAPTERS/USPORY.tex}
+\input{CHAPTERS/KAPITOLA.tex}
 
 % Zaver prace
 \input{CHAPTERS/ZAVER.tex}
