Added video script template. Insert copyrightstatement.

--- a/text.tex
+++ b/text.tex
@@ -47,7 +47,7 @@
 
 \maketitle
 
-%\makecopyrightstatement{V~Brně}
+\makecopyrightstatement{V~Brně}
 
 \makethanks{Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Proin pede metus, vulputate nec, fermentum fringilla, vehicula vitae, justo. Pellentesque arcu. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce aliquam vestibulum ipsum. Aenean placerat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Vivamus porttitor turpis ac leo. Nullam eget nisl. Maecenas libero. Nunc auctor. Nullam rhoncus aliquam metus. Integer pellentesque quam vel velit.}
 
