Finish section of SDK installation guide in MD.

--- a/template/template.cls
+++ b/template/template.cls
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{template/socthesis}[2017/01/15 Document class for czech SOC theses]
+\ProvidesClass{template/UnTeXtem}[2017/01/15 Document class for czech SOC theses]
 \LoadClass[12pt, a4paper, oneside]{book}
 
 \RequirePackage[utf8]{inputenc}
