--- a/text.tex
+++ b/text.tex
@@ -15,6 +15,7 @@
 \usepackage[author=,status=draft]{fixme} % vkládání poznámek  
 % dva módy (status): draft (poznámky se zobrazují v PDF) / final (poznámky se nezobrazují v PDF)
 \usepackage{multirow}
+\usepackage{float}
 
 \lstset { %
     language=C++,
