Edit README, add cont. to thesis introduction

--- a/text.tex
+++ b/text.tex
@@ -6,6 +6,8 @@
 \usepackage{hyperref}
 \usepackage{gensymb} % balíček symbolů
 \usepackage{booktabs}
+\usepackage[T1]{fontenc} % evropské uvozovky
+\usepackage{csquotes} % text lze uvést do uvozovek pomocí \enquote{text}
 
 \usepackage[toc,page]{appendix}
 \usepackage{color} % balíček pro obarvování textů
@@ -45,6 +47,7 @@
 % \hypertarget{label}{cíl_odkazu} - cíl odkazu 
 
 \begin{document}
+\hyphenation{SOLIDWORKS Solid-Works}
 
 \maketitle
 
