Translate part of MD guide to LaTeX

--- a/text.tex
+++ b/text.tex
@@ -12,7 +12,7 @@
 \usepackage[toc,page]{appendix}
 \usepackage{color} % balíček pro obarvování textů
 \usepackage{xcolor}  % zapne možnost používání barev, mj. pro \definecolor
-\definecolor{mygreen}{RGB}{0,150,0} % nastavení barev odkazů 
+\definecolor{mygreen}{RGB}{0,153,153} % nastavení barev odkazů 
 \usepackage{listings} % balíček pro formátování zdrojových kódů 
 \usepackage[author=,status=draft]{fixme} % vkládání poznámek  
 % dva módy (status): draft (poznámky se zobrazují v PDF) / final (poznámky se nezobrazují v PDF)
@@ -89,6 +89,9 @@ Here goes 5 or more keywords
 
 % Uspory dosazene pouzitim protoplantu
 \input{CHAPTERS/KAPITOLA.tex}
+
+% Uspory dosazene pouzitim protoplantu
+\input{CHAPTERS/TEXTOVE-NAVODY.tex}
 
 % Zaver prace
 \input{CHAPTERS/ZAVER.tex}
