Add basic structure for upcoming text guides.

--- a/text.tex
+++ b/text.tex
@@ -94,7 +94,7 @@ SolidWorks, 3D modelling, CAD, videoguides, P3D
 \input{CHAPTERS/UVOD.tex}
 
 % Uspory dosazene pouzitim protoplantu
-\input{CHAPTERS/MOTIVACE.tex}
+%\input{CHAPTERS/MOTIVACE.tex}
 
 % Portál P3D
 \input{CHAPTERS/P3D-PORTAL.tex}
