--- a/template/template.cls
+++ b/template/template.cls
@@ -132,7 +132,7 @@
 	\section*{Prohlášení}
 	Prohlašuji, že svou maturitní práci na téma \It{\@titlecz} jsem vypracoval samostatně pod vedením {\@mentorstatement} a~s~použitím odborné literatury a~dalších informačních zdrojů, které jsou všechny citovány v~práci a~uvedeny v~seznamu literatury na~konci práce.
 
-	Dále prohlašuji, že tištěná i~elektronická verze práce jsou shodné a~nemám závažný důvod proti zpřístupňování této práce v~souladu se~zákonem č.~121/2000~Sb., o~právu autorském, o~právech souvisejících s~právem autorským a~změně některých zákonů (autorský zákon) v~platném změní.
+	Dále prohlašuji, že tištěná i~elektronická verze práce jsou shodné a~nemám závažný důvod proti zpřístupňování této práce v~souladu se~zákonem č.~121/2000~Sb., o~právu autorském, o~právech souvisejících s~právem autorským a~změně některých zákonů (autorský zákon) v~platném znění.
 
 	\vspace{10mm}
 
