Add more text guides, cleanup, recompile.

--- a/text.tex
+++ b/text.tex
@@ -30,7 +30,7 @@
 }
 
 \addbibresource{text.bib}
-\nocite{*}
+%\nocite{*}
 
 \titlecz{Využití videonávodů pro výuku konstrukce v SolidWorks} % Název práce
 \titleen{Videoguides usage in SolidWorks construction education} % Anglický název práce
@@ -59,7 +59,7 @@
 
 \makecopyrightstatement{V~Brně}
 
-\makethanks{Děkuji svému vedoucímu práce}
+\makethanks{}
 
 \pagestyle{empty}
 
@@ -92,9 +92,6 @@ SolidWorks, 3D modelling, CAD, videoguides, P3D
 
 % Uvod prace
 \input{CHAPTERS/UVOD.tex}
-
-% Uspory dosazene pouzitim protoplantu
-%\input{CHAPTERS/MOTIVACE.tex}
 
 % Portál P3D
 \input{CHAPTERS/P3D-PORTAL.tex}
