Fix compilation error on newer versions of LaTeX
Fix error with packages load order that prevented successfull compilation on newer TeXlive versions.

--- a/template/template.cls
+++ b/template/template.cls
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{template/UnTeXtem}[2020/04/12 Universal tex template document class]
+\ProvidesClass{template/template}[2020/04/12 Universal tex template document class]
 \LoadClass[12pt, a4paper, oneside]{book}
 
 \RequirePackage[utf8]{inputenc}
@@ -9,7 +9,6 @@
 \RequirePackage{array}
 \RequirePackage[bookmarksopen,colorlinks,plainpages=false,linkcolor=black,urlcolor=blue,citecolor=black,filecolor=black,menucolor=black,unicode=true,breaklinks]{hyperref}
 \RequirePackage{csquotes}
-\RequirePackage[backend=bibtex,bibstyle=numeric,sorting=none,date=long,dateabbrev=false,texencoding=utf8,bibencoding=utf8,style=iso-numeric]{biblatex}
 \RequirePackage{caption}
 
 %%%%%% PŘÍKAZY
