Change CHAPTER files naming scheme

--- a/text.tex
+++ b/text.tex
@@ -94,23 +94,23 @@ SolidWorks, 3D modelling, CAD, videoguides, P3D
 \newpage
 
 % Uvod prace
-\input{CHAPTERS/UVOD.tex}
+\input{CHAPTERS/01 - UVOD.tex}
 
 % Portál P3D
-\input{CHAPTERS/P3D-PORTAL.tex}
+\input{CHAPTERS/010 - P3D-PORTAL.tex}
 
 % Textové verze vybranuých návodů
-\input{CHAPTERS/TEXTOVE-NAVODY.tex}
+\input{CHAPTERS/015 - TEXTOVE-NAVODY.tex}
 
 % Zaver prace
-\input{CHAPTERS/ZAVER.tex}
+\input{CHAPTERS/095 - ZAVER.tex}
 \newpage
 
 \appendix
 \addcontentsline{toc}{chapter}{Přílohy}
 
 % Prilohy
-\input{CHAPTERS/PRILOHY.tex}
+\input{CHAPTERS/100 - PRILOHY.tex}
 
 % \printbibliography[title=Literatura]
 \addcontentsline{toc}{chapter}{Literatura}
