Add Part/Assembly renaming guide

--- a/text.tex
+++ b/text.tex
@@ -21,7 +21,7 @@
 \usepackage{multirow}
 \usepackage{float}
 
-\usepackage{expl3}
+\usepackage{expl3} % bibtex dependency, must be loaded prior to the bibtex
 \usepackage[backend=bibtex,bibstyle=numeric,sorting=none,date=long,dateabbrev=false,texencoding=utf8,bibencoding=utf8,style=iso-numeric]{biblatex}
 
 \usepackage[a4paper]{geometry}
@@ -54,7 +54,7 @@
 % \hypertarget{label}{cíl_odkazu} - cíl odkazu 
 
 \begin{document}
-%\hyphenation{SOLIDWORKS Solid/-Works}
+\hyphenation{SOLIDWORKS Solid/-Works}
 
 \maketitle
 
