Add CHPTR "Uplatneni", add video list to appendix

--- a/text.tex
+++ b/text.tex
@@ -38,7 +38,7 @@
 \titlecz{Využití videonávodů pro výuku konstrukce v SolidWorks} % Název práce
 \titleen{Videoguides usage in SolidWorks construction education} % Anglický název práce
 \author{Petr Štourač} % Jméno autora
-\institution{STŘEDNÍ PRŮMYSLOVÁ A VYŠŠÍ ODBORNÁ ŠKOLA BRNO, Sokolská} % Celý název instituce
+\institution{STŘEDNÍ PRŮMYSLOVÁ A VYŠŠÍ ODBORNÁ ŠKOLA BRNO, Sokolská 1} % Celý název instituce
 \institutiontype{příspěvková organizace} % Typ instituce
 \thesistype{Maturitní práce}  % Typ práce/dokumentu
 \mentor{Ing. Václav Zavadil} % Jméno vedoucího práce
@@ -99,8 +99,11 @@ SolidWorks, 3D modelling, CAD, videoguides, P3D
 % Portál P3D
 \input{CHAPTERS/010 - P3D-PORTAL.tex}
 
-% Textové verze vybranuých návodů
+% Textové verze vybraných návodů
 \input{CHAPTERS/015 - TEXTOVE-NAVODY.tex}
+
+% Uplatnění práce
+\input{CHAPTERS/020 - UPLATNENI.tex}
 
 % Zaver prace
 \input{CHAPTERS/095 - ZAVER.tex}
