Update \makethanks, add new keywords

--- a/text.tex
+++ b/text.tex
@@ -62,7 +62,7 @@
 
 \makecopyrightstatement{V~Brně}
 
-\makethanks{}
+\makethanks{Rád bych poděkoval vedoucímu mojí práce, Ing. Václavu Zavadilovi za podnětné připomínky, rady a svobodu, které mi při přípravě projektu poskytl. Dále děkuji Ing. Barnabášovi Jakabovi za pomoc s integrací výsledků mé práce do výuky konstrukčního cvičení na této škole. V neposlední řadě velmi děkuji všem vyučujícím předmětu KOC za jejich zájem o využití videonávodů vzniklých v rámci tohoto projektu do jejich výuky. Na závěr bych rád poděkoval studentům, kteří přišli s náměty na některá videa.}
 
 \pagestyle{empty}
 
@@ -70,7 +70,7 @@
 Sem patří anotace v češtině.
 
 \subsection*{Klíčová slova}
-SolidWorks, 3D modelování, CAD, videonávody, P3D
+SolidWorks, 3D modelování, CAD, videonávody, P3D, Parallax media production, Parallax3D
 
 \vspace{20mm}
 
@@ -81,7 +81,7 @@ Here goes english version of thesis annotation.
 % \fxnote[author=PŠ]{\textcolor{mygreen}{A dokonce je lze obarvit!}}
 
 \subsection*{Keywords}
-SolidWorks, 3D modelling, CAD, videoguides, P3D
+SolidWorks, 3D modelling, CAD, videoguides, P3D, Parallax media production, Parallax3D
 
 \newpage
 \pagestyle{plain}
